change event style

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         </div>
     </section>
 
+    <script src="circular-carousel.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
