--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event manager</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <img src="./assets/img/blob-haikei.svg" alt="Event manager logo bg" class="logo-bg">
+        <img src="./assets/img/logo.png" alt="Event manager logo" class="logo">
+
         <h1>Event manager</h1>
         <nav>
             <ul>
