--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
 
     <link rel="stylesheet" href="styles.css">
+
+    <!-- React and ReactDOM from CDN -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
     <header>
@@ -21,11 +26,14 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">My Events</a></li>
+                <li><a href="guests.html">Guests</a></li>
                 <li><a href="#">Statistics</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <button>Create Event</button>
+        <div class="header-auth">
+            <button id="auth-button">Login</button>
+        </div>
     </header>
     <main class="hero-container">
         <div class="hero-content">
@@ -87,6 +95,7 @@
     <section class="manual-event-section" id="manual-event-section">
         <div class="manual-event-container">
             <h2 class="section-title">Створити івент власноруч</h2>
+            <div id="auth-status" style="padding: 10px; margin-bottom: 15px; border-radius: 8px; text-align: center; display: none;"></div>
             <form id="manual-event-form" class="manual-form">
                 <div class="form-row">
                     <div class="form-group">
@@ -119,13 +128,9 @@
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group">
+                    <div class="form-group full-width">
                         <label for="event-location">Локація</label>
                         <input type="text" id="event-location" name="eventLocation" placeholder="Адреса проведення">
-                    </div>
-                    <div class="form-group">
-                        <label for="event-guests">Кількість гостей *</label>
-                        <input type="number" id="event-guests" name="eventGuests" required min="1" placeholder="50">
                     </div>
                 </div>
 
@@ -169,7 +174,271 @@
         </div>
     </section>
 
-    <script src="circular-carousel.js"></script>
+    <!-- React Carousel Component -->
+    <script type="text/babel">
+        const { useState, useEffect, useRef } = React;
+
+        // EventCard Component
+        function EventCard({ eventData, position, isActive, containerWidth, containerHeight, onHover }) {
+            const cardRef = useRef(null);
+            const [isHovered, setIsHovered] = useState(false);
+
+            // Responsive values
+            const isMobile = window.innerWidth <= 768;
+            const isSmallMobile = window.innerWidth <= 480;
+
+            let cardSize, radius, angleStep;
+
+            if (isSmallMobile) {
+                cardSize = 160;
+                radius = Math.min(containerWidth * 0.45, 280);
+                angleStep = 45;
+            } else if (isMobile) {
+                cardSize = 200;
+                radius = Math.min(containerWidth * 0.5, 350);
+                angleStep = 40;
+            } else {
+                cardSize = 240;
+                radius = Math.min(containerWidth * 0.55, 450);
+                angleStep = 40;
+            }
+
+            // Calculate position
+            const centerX = containerWidth / 2;
+            const centerY = containerHeight * 0.6;
+
+            const totalAngle = (5 - 1) * angleStep;
+            const startAngle = -totalAngle / 2;
+            const angle = startAngle + (position * angleStep);
+            const angleRad = (angle * Math.PI) / 180;
+
+            const x = centerX + Math.sin(angleRad) * radius - (cardSize / 2);
+            const y = centerY - Math.cos(angleRad) * radius * 0.4 - (cardSize / 2);
+
+            const isCenter = position === 2;
+            const distanceFromCenter = Math.abs(position - 2);
+            const scale = isCenter ? 1.1 : Math.max(0.75, 1 - distanceFromCenter * 0.15);
+            const opacity = Math.max(0.5, 1 - distanceFromCenter * 0.25);
+            const zIndex = isCenter ? 15 : 10 - distanceFromCenter;
+            const rotation = angle * 0.1;
+
+            const handleMouseEnter = () => {
+                setIsHovered(true);
+                if (onHover) onHover(true);
+            };
+
+            const handleMouseLeave = () => {
+                setIsHovered(false);
+                if (onHover) onHover(false);
+            };
+
+            const cardStyle = {
+                position: 'absolute',
+                width: `${cardSize}px`,
+                height: `${cardSize}px`,
+                transform: isHovered
+                    ? `translate(${x}px, ${y}px) scale(${scale * 1.08}) rotate(${rotation}deg) translateY(-12px)`
+                    : `translate(${x}px, ${y}px) scale(${scale}) rotate(${rotation}deg)`,
+                opacity: opacity,
+                zIndex: isHovered ? 25 : zIndex,
+                transition: isHovered
+                    ? 'all 0.3s cubic-bezier(0.4, 0, 0.2, 1)'
+                    : 'all 0.6s cubic-bezier(0.4, 0, 0.2, 1)',
+                borderRadius: '20px',
+                overflow: 'hidden',
+                boxShadow: isCenter
+                    ? '0 20px 60px rgba(102, 126, 234, 0.4), 0 0 40px rgba(102, 126, 234, 0.2)'
+                    : '0 10px 30px rgba(0, 0, 0, 0.3)',
+                cursor: 'pointer',
+            };
+
+            const imageStyle = {
+                backgroundImage: `url('${eventData.imageUrl}')`,
+                backgroundSize: 'contain',
+                backgroundPosition: 'center',
+                backgroundRepeat: 'no-repeat',
+                width: '100%',
+                height: '100%',
+            };
+
+            return (
+                <div
+                    ref={cardRef}
+                    className={`circular-card ${isCenter ? 'active-card' : ''} ${isHovered ? 'hovering' : ''}`}
+                    style={cardStyle}
+                    onMouseEnter={handleMouseEnter}
+                    onMouseLeave={handleMouseLeave}
+                >
+                    <div className="event-card-image-only" style={imageStyle}></div>
+                    <div className="card-overlay">
+                        <h3 className="card-title">{eventData.title}</h3>
+                        <p className="card-date">{eventData.date}</p>
+                    </div>
+                </div>
+            );
+        }
+
+        // CircularCarousel Component
+        function CircularCarousel({ events }) {
+            const [currentIndex, setCurrentIndex] = useState(0);
+            const [containerDimensions, setContainerDimensions] = useState({ width: 0, height: 400 });
+            const [isHovered, setIsHovered] = useState(false);
+            const containerRef = useRef(null);
+            const autoRotateRef = useRef(null);
+
+            const visibleCards = 5;
+
+            // Handle auto-rotation
+            useEffect(() => {
+                const startAutoRotation = () => {
+                    if (autoRotateRef.current) {
+                        clearInterval(autoRotateRef.current);
+                    }
+                    autoRotateRef.current = setInterval(() => {
+                        if (!isHovered) {
+                            setCurrentIndex((prev) => (prev + 1) % events.length);
+                        }
+                    }, 3500);
+                };
+
+                startAutoRotation();
+
+                return () => {
+                    if (autoRotateRef.current) {
+                        clearInterval(autoRotateRef.current);
+                    }
+                };
+            }, [events.length, isHovered]);
+
+            // Handle resize and initial dimensions
+            useEffect(() => {
+                const updateDimensions = () => {
+                    if (containerRef.current) {
+                        const wrapper = containerRef.current.querySelector('.circular-carousel-wrapper');
+                        if (wrapper) {
+                            setContainerDimensions({
+                                width: wrapper.offsetWidth,
+                                height: wrapper.offsetHeight || 400
+                            });
+                        }
+                    }
+                };
+
+                // Wait a bit for styles to load
+                setTimeout(updateDimensions, 100);
+
+                let resizeTimeout;
+                const handleResize = () => {
+                    clearTimeout(resizeTimeout);
+                    resizeTimeout = setTimeout(updateDimensions, 150);
+                };
+
+                window.addEventListener('resize', handleResize);
+                return () => {
+                    window.removeEventListener('resize', handleResize);
+                    clearTimeout(resizeTimeout);
+                };
+            }, []);
+
+            const handleContainerHover = (hovered) => {
+                setIsHovered(hovered);
+            };
+
+            // Calculate visible cards
+            const visibleIndices = [];
+            for (let i = 0; i < visibleCards; i++) {
+                let index = (currentIndex + i - 2 + events.length) % events.length;
+                visibleIndices.push(index);
+            }
+
+            return (
+                <div
+                    ref={containerRef}
+                    onMouseEnter={() => handleContainerHover(true)}
+                    onMouseLeave={() => handleContainerHover(false)}
+                >
+                    <h2 className="carousel-header">Popular Events</h2>
+                    <div className="circular-carousel-wrapper">
+                        <div className="circular-carousel-track">
+                            {events.map((event, cardIndex) => {
+                                const visiblePosition = visibleIndices.indexOf(cardIndex);
+                                if (visiblePosition === -1) return null;
+
+                                return (
+                                    <EventCard
+                                        key={cardIndex}
+                                        eventData={event}
+                                        position={visiblePosition}
+                                        isActive={visiblePosition === 2}
+                                        containerWidth={containerDimensions.width}
+                                        containerHeight={containerDimensions.height}
+                                        onHover={handleContainerHover}
+                                    />
+                                );
+                            })}
+                        </div>
+                    </div>
+                </div>
+            );
+        }
+
+        // Event data
+        const eventsData = [
+            {
+                title: 'Birthday Celebration',
+                date: 'Year-round',
+                description: 'Make your birthday unforgettable with our planning tools and party ideas.',
+                imageUrl: './assets/img/happy-birthday.png',
+                category: 'Celebration'
+            },
+            {
+                title: 'Halloween Party',
+                date: 'October 31',
+                description: 'Spooky decorations, costume ideas, and party games for a thrilling Halloween.',
+                imageUrl: './assets/img/happy-halloween.png',
+                category: 'Holiday'
+            },
+            {
+                title: 'New Year Party',
+                date: 'December 31',
+                description: 'Ring in the new year with style! Plan the perfect celebration.',
+                imageUrl: './assets/img/happy-new-year.png',
+                category: 'Holiday'
+            },
+            {
+                title: 'Christmas Gathering',
+                date: 'December 25',
+                description: 'Create magical Christmas moments with family and friends.',
+                imageUrl: './assets/img/merry-christmas.png',
+                category: 'Holiday'
+            },
+            {
+                title: 'Wedding Anniversary',
+                date: 'Year-round',
+                description: 'Celebrate love and commitment with a memorable anniversary event.',
+                imageUrl: './assets/img/marriage.png',
+                category: 'Celebration'
+            },
+            {
+                title: 'Graduation Party',
+                date: 'Year-round',
+                description: 'Honor achievements and celebrate new beginnings with a graduation party.',
+                imageUrl: './assets/img/graduated.png',
+                category: 'Celebration'
+            }
+        ];
+
+        // Render React Carousel
+        document.addEventListener('DOMContentLoaded', () => {
+            const container = document.getElementById('events-container');
+            if (container) {
+                const root = ReactDOM.createRoot(container);
+                root.render(<CircularCarousel events={eventsData} />);
+            }
+        });
+    </script>
+
+    <script src="auth.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
