--- a/pages/guests.html
+++ b/pages/guests.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guests - Event Manager</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
         <h1>Event manager</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="events.html">My Events</a></li>
                 <li><a href="guests.html">Guests</a></li>
                 <li><a href="#statistics">Statistics</a></li>
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <script src="auth.js"></script>
-    <script src="guests.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/guests.js"></script>
 </body>
 </html>
