--- a/pages/login.html
+++ b/pages/login.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Event Manager</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicons/favicon-16x16.png">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <img src="./assets/img/blob-haikei.svg" alt="Event manager logo bg" class="logo-bg">
-        <img src="./assets/img/logo.png" alt="Event manager logo" class="logo">
+        <img src="../assets/img/blob-haikei.svg" alt="Event manager logo bg" class="logo-bg">
+        <img src="../assets/img/logo.png" alt="Event manager logo" class="logo">
 
         <h1>Event manager</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="events.html">My Events</a></li>
                 <li><a href="guests.html">Guests</a></li>
                 <li><a href="#">Statistics</a></li>
@@ -89,6 +89,6 @@
         </div>
     </main>
 
-    <script src="login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
