--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- React and ReactDOM from CDN -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
@@ -25,8 +25,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="events.html">My Events</a></li>
-                <li><a href="guests.html">Guests</a></li>
+                <li><a href="pages/events.html">My Events</a></li>
+                <li><a href="pages/guests.html">Guests</a></li>
                 <li><a href="#">Statistics</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
@@ -438,7 +438,7 @@
         });
     </script>
 
-    <script src="auth.js"></script>
-    <script src="script.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
